Import of XANT/Shardcache-Client-Fast-0.06 from CPAN.
gitpan-cpan-distribution: Shardcache-Client-Fast
gitpan-cpan-version:      0.06
gitpan-cpan-path:         XANT/Shardcache-Client-Fast-0.06.tar.gz
gitpan-cpan-author:       XANT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Shardcache::Client::Fast.
 
+0.06  Fri Feb  7 00:09:52 CET 2014
+        - new methods: 'get_multi' and 'set_multi' imported from libshardcache
+        - extended names (short names are now deprecated)
+        - various bugfixes
 0.05  Tue Jan 21 00:54:22 CET 2014
         - Change in libshardcache and in the protocol
         - new methods: 'add', 'offset', 'exists'
