Import of XANT/Shardcache-Client-Fast-0.15 from CPAN.
gitpan-cpan-distribution: Shardcache-Client-Fast
gitpan-cpan-version:      0.15
gitpan-cpan-path:         XANT/Shardcache-Client-Fast-0.15.tar.gz
gitpan-cpan-author:       XANT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Shardcache::Client::Fast.
 
+0.15  Tue Jul 15 14:46:10 CEST 2014
+        - allow to set the log_level when creating a new shardcache_client object
+
 0.14  Fri Jul 11 13:26:29 CEST 2014
         - allow to access/control the check_connection option on the underlying shardcache_client instance
 
