Import of XANT/Shardcache-Client-Fast-0.16 from CPAN.
gitpan-cpan-distribution: Shardcache-Client-Fast
gitpan-cpan-version:      0.16
gitpan-cpan-path:         XANT/Shardcache-Client-Fast-0.16.tar.gz
gitpan-cpan-author:       XANT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Shardcache::Client::Fast.
 
+0.16  Thu Sep 11 16:07:34 CEST 2014
+        - safety belts to not crash if the underlying shardcache_client_get_multi() fails
+
 0.15  Tue Jul 15 14:46:10 CEST 2014
         - allow to set the log_level when creating a new shardcache_client object
 
